# vllm-openvino

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/: offline_inference_openvino.py
vllm_openvino/: __init__.py  envs.py  platform.py  utils.py
vllm_openvino/attention/backends/: openvino.py
vllm_openvino/model_executor/model_loader/: openvino.py
vllm_openvino/worker/: openvino_model_runner.py  openvino_worker.py
vllm_openvino/worker_v1/: openvino_model_runner_v1.py  openvino_worker_v1.py
