[build-system]
requires = [
  "setuptools>=48",
]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-openvino"
description = "OpenVINO plugin for vLLM"
readme = "README.md"
license = {text = "Apache 2"}
version = "0.8.4"
dependencies = [
    "openvino >= 2025.1.0",
    #optimum is in dependency list of optimum-intel
    "optimum-intel[nncf] @ git+https://github.com/huggingface/optimum-intel.git@dba7dced0145b539bb0563e5d5741d00daeb8025",
    "vllm == 0.8.4",
]
requires-python = ">=3.9"

[project.entry-points."vllm.platform_plugins"]
openvino = "vllm_openvino:register"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["vllm_openvino*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[tool.setuptools_scm]
# version_file = "vllm_openvino/_version.py" # currently handled by `setup.py:get_version()`

#[tool.uv]
## Never install torch, so that no dependencies can override it.
## This requires that torch is installed separately in the target environment.
#override-dependencies = [
#    "torch; sys_platform == 'never'",
#    "torchaudio; sys_platform == 'never'",
#    "torchvision; sys_platform == 'never'",
#]

[tool.uv.sources]
vllm = { git = "https://github.com/vllm-project/vllm", rev = "v0.8.4" }
